Fixed scrollbar appearing on resize

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0px;
-    overflow-y: hidden;
+    overflow: hidden;
     background-color: #9476AB;
 }
 
